# rust-on-lambda

./: Cargo.toml  Makefile  README.md
src/: main.rs
