[package]
name = "bootstrap"
version = "0.1.0"
authors = ["Paweł Przeniczny <pawel.przeniczny@airhelp.com>"]
edition = "2018"

[dependencies]
http = "0.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
lambda_runtime = { path = "../aws-lambda-rust-runtime/lambda-runtime", version = "^0.1" }
tokio = "^0.1"
base64 = "0.10"
failure = "0.1"
failure_derive = "0.1"
serde_urlencoded = "0.5"
simple_logger = "^1"
log = "^0.4"

[dev-dependencies]
